correcting missaligned button text

--- a/css/main.css
+++ b/css/main.css
@@ -18,5 +18,5 @@
   align-self: flex-start;
 }
 .width_clamp--14ch {
-  max-width: 14ch;;
+  max-width: 15ch;;
 }
